added email template generator

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -6,7 +6,7 @@
     "siteUrl": "https://optrust.sharepoint.com/catalogue/",
     "username": "admin@optrust.onmicrosoft.com",
     "spRootFolder": "Assets",
-    "dlRootFolder": "App",
+    "dlRootFolder": "src",
     "bowerlibs": []
   }
 }
